fix(elements): css prop apis
- fixed missing host `--font-size` property in grid cell
- added `--border` property to card styles.
- fixed input group background color
- fixed progress ring styles to minimize overlap of warning svg

 closes #139

--- a/projects/elements/src/input/input-group.css
+++ b/projects/elements/src/input/input-group.css
@@ -1,5 +1,5 @@
 :host {
-  --background: var(--nve-sys-support-color);
+  --background: var(--nve-ref-border-color);
   --color: var(--nve-sys-interaction-field-color);
   --border-radius: var(--nve-ref-border-radius-sm);
   --gap: calc(var(--nve-ref-space-xxxs) / 2);
